-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 5.0.0-beta1
-
a4141b8d14664554048faf2a9a9160f29f0069ec (qt-creator/tqtc-qt-creator/master)
When doing git log for file, project or for repository, the shown editor is marked with an asterisk.
This also confuses "Save All" action in File menu. To reproduce:
1. Open e.g. creator project
2. "Save All" in File menu is disabled.
3. Do git log -> "Save All" is enabled now.
4. Close the Git log editor -> "Save All" is still enabled.
5. Click "Save All" -> "Save All" is still enabled.
For Gerrit Dashboard: QTCREATORBUG-25936 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
373255,3 | Git: Fix log editor shows as modified | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |