Git: Fix log editor shows as modified

Fixes: QTCREATORBUG-25936
Change-Id: I072c723e59073399531b822ec76bdac08867c72b
Reviewed-by: André Hartmann <aha_1980@gmx.de>